--- a/src/styles.css
+++ b/src/styles.css
@@ -654,6 +654,10 @@ video {
   margin-left: 2.5rem;
 }
 
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
 .mt-16 {
   margin-top: 4rem;
 }
@@ -666,16 +670,24 @@ video {
   margin-top: 2rem;
 }
 
-.ml-2 {
-  margin-left: 0.5rem;
+.mt-20 {
+  margin-top: 5rem;
 }
 
 .mt-24 {
   margin-top: 6rem;
 }
 
-.mt-20 {
-  margin-top: 5rem;
+.mt-\[24\] {
+  margin-top: 24;
+}
+
+.mt-\[10vh\] {
+  margin-top: 10vh;
+}
+
+.mt-\[40vh\] {
+  margin-top: 40vh;
 }
 
 .block {
@@ -722,20 +734,8 @@ video {
   height: 65vh;
 }
 
-.h-32 {
-  height: 8rem;
-}
-
-.h-1 {
-  height: 0.25rem;
-}
-
-.h-1\/5 {
-  height: 20%;
-}
-
-.h-44 {
-  height: 11rem;
+.h-full {
+  height: 100%;
 }
 
 .w-11\/12 {
@@ -744,6 +744,10 @@ video {
 
 .w-20 {
   width: 5rem;
+}
+
+.w-3\/4 {
+  width: 75%;
 }
 
 .w-8 {
@@ -756,10 +760,6 @@ video {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-3\/4 {
-  width: 75%;
 }
 
 .flex-1 {
@@ -792,10 +792,6 @@ video {
 
 .justify-between {
   justify-content: space-between;
-}
-
-.justify-around {
-  justify-content: space-around;
 }
 
 .scroll-smooth {
@@ -914,6 +910,14 @@ video {
   padding-left: 0.25rem;
 }
 
+.pt-\[40vh\] {
+  padding-top: 40vh;
+}
+
+.pt-\[30vh\] {
+  padding-top: 30vh;
+}
+
 .text-center {
   text-align: center;
 }
@@ -938,17 +942,17 @@ video {
   line-height: 1.75rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
 .font-bold {
   font-weight: 700;
 }
 
 .font-medium {
   font-weight: 500;
+}
+
+.text-amber-50 {
+  --tw-text-opacity: 1;
+  color: rgb(255 251 235 / var(--tw-text-opacity));
 }
 
 .text-orange-800 {
@@ -969,16 +973,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-amber-100 {
-  --tw-text-opacity: 1;
-  color: rgb(254 243 199 / var(--tw-text-opacity));
-}
-
-.text-amber-50 {
-  --tw-text-opacity: 1;
-  color: rgb(255 251 235 / var(--tw-text-opacity));
 }
 
 .shadow-2xl {
