--- a/src/styles.css
+++ b/src/styles.css
@@ -1076,6 +1076,11 @@ video {
   .sm\:hidden {
     display: none;
   }
+
+  .sm\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
 }
 
 @media (min-width: 768px) {
